Changelog
=========

What follows is a history of changes from release to release.  For more
details about specific issue IDs listed below, consult the issue tracker at
https://oodt.jpl.nasa.gov/jira/browse/CA.


1.0.2 - TBD
-----------

* Re-attaches members of committees of type "Collaborative Group" to any
  name-matching "Collaborative Group" objects (from edrnsite.collaborations) in
  the portal.  You should re-ingest committees to do this re-attachment
  whenever you re-ingest sites (because the site ingest destroys People
  objects).


1.0.1 - Upgrade Cleanup
-----------------------

This release updates the GenericSetup profile to 4, and provides upgrade steps
to that profile.


1.0.0 - Plone 4
---------------

This release makes eke.committees compatible with Plone 4.


0.0.0 - Unreleased
------------------

Initial release into beta.  Creation of this project was spurred on by these
issues:

* CA-591 - Broken links on Committees pages
* CA-718 - Replace manually maintained committee information with RDF ingest