@@ -7,3 +7,6 @@ extends =
     http://tumor.jpl.nasa.gov/repo/edrn/portal/etc/base.cfg
     setup.cfg
 package-name = eke.committees
+
+[test]
+eggs = ${buildout:package-name} [test]
