@@ -1,0 +1,21 @@
+# encoding: utf-8
+# Copyright 2010-2011 California Institute of Technology. ALL RIGHTS
+# RESERVED. U.S. Government Sponsorship acknowledged.
+
+'''EKE Committees: functional and documentation tests.
+'''
+
+from eke.committees.testing import EKE_COMMITTEES_FUNCTIONAL_TESTING as LAYER
+from plone.testing import layered
+import doctest
+import unittest2 as unittest
+
+optionFlags = (doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE | doctest.REPORT_ONLY_FIRST_FAILURE)
+
+def test_suite():
+    return unittest.TestSuite([
+        layered(doctest.DocFileSuite('README.txt', package='eke.committees', optionflags=optionFlags), LAYER),
+    ])
+
+if __name__ == '__main__':
+    unittest.main(defaultTest='test_suite')
