@@ -1,17 +1,20 @@
 # encoding: utf-8
-# Copyright 2010 California Institute of Technology. ALL RIGHTS
+# Copyright 2010-2011 California Institute of Technology. ALL RIGHTS
 # RESERVED. U.S. Government Sponsorship acknowledged.
 
-'''
-EKE Committees: test the setup of this package.
+'''EKE Committees: test the setup of this package.
 '''
 
-import unittest
-from base import BaseTestCase
+from eke.committees.testing import EKE_COMMITTEES_INTEGRATION_TESTING
 from Products.CMFCore.utils import getToolByName
+import unittest2 as unittest
 
-class TestSetup(BaseTestCase):
+class SetupTest(unittest.TestCase):
     '''Unit tests the setup of this package.'''
+    layer = EKE_COMMITTEES_INTEGRATION_TESTING
+    def setUp(self):
+        super(SetupTest, self).setUp()
+        self.portal = self.layer['portal']
     def testCatalogIndexes(self):
         '''Check if indexes are properly installed'''
         catalog = getToolByName(self.portal, 'portal_catalog')
@@ -31,7 +34,7 @@ class TestSetup(BaseTestCase):
             self.failUnless(i in types)
 
 def test_suite():
-    suite = unittest.TestSuite()
-    suite.addTest(unittest.makeSuite(TestSetup))
-    return suite
-    
+    return unittest.defaultTestLoader.loadTestsFromName(__name__)
+
+if __name__ == '__main__':
+    unittest.main(defaultTest='test_suite')
