@@ -14,6 +14,8 @@ https://oodt.jpl.nasa.gov/jira/browse/CA.
   the portal.  You should re-ingest committees to do this re-attachment
   whenever you re-ingest sites (because the site ingest destroys People
   objects).
+* Uses the modern plone.app.testing framework.
+* Collaborative Groups are now hidden.
 
 
 1.0.1 - Upgrade Cleanup
